--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {
     border-radius: 50%;
     background-size: contain;
     /* background-image: url(https://scontent.fpat3-2.fna.fbcdn.net/v/t1.0-9/75513501_149825633025158_5096427507901530112_o.jpg?_nc_cat=102&_nc_sid=09cbfe&_nc_ohc=P0C9vnYU1D4AX-sqpIn&_nc_ht=scontent.fpat3-2.fna&oh=3f2d170e6cb5ae2f1b129416c0454638&oe=5F9A7756); */
-    background-image: url(image/manas.jpeg);
+    background-image: url(manas.jpeg);
   }
   
   .user-name {
